--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
-    "@papyrs/stylo": "^0.0.8",
+    "@papyrs/stylo": "^0.0.8-1",
     "firebase": "^9.4.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
